<resources>
    <string name="app_name">地铁管片信息终端</string>
    <string name="action_settings">Settings</string>
    <string name="pref_menu_user">用户信息</string>
    <string name="pref_menu_info">基本信息</string>
    <string name="pref_menu_oper">管片操作</string>
    <string name="pref_menu_setting">设置</string>
    <string name="pref_title_card">卡片</string>
    <string name="pref_card_read">管片信息查询</string>
    <string name="pref_card_zhuchang">驻场监理</string>
    <string name="pref_card_xianchang">现场监理</string>
    <string name="pref_title_setting">设置</string>
    <string name="pref_setting_info">系统信息</string>
    <string name="pref_setting_nfc">NFC设置</string>
    <string name="pref_nfc_choose">NFC设备选择</string>
    <string name="pref_nfc_sys">系统NFC</string>
    <string name="pref_nfc_ext">外接NFC</string>
    <string name="pref_title_card_info">管片详情</string>
    <string name="nfc_read_chipid">芯片ID</string>
    <string name="nfc_read_shengchengdangwei">生产单位</string>
    <string name="nfc_read_gongchengmingcheng">警示信息</string>
    <string name="nfc_read_guanpianleixing">管片类型</string>
    <string name="nfc_read_huanhao">环号</string>
    <string name="nfc_read_fenkuaihao">分块号</string>
    <string name="nfc_read_chanpinghegezheng">产品合格证</string>
    <string name="nfc_read_shengchangrenwudanhao">生产任务</string>
    <string name="nfc_read_shengchangriqi">生产日期</string>
    <string name="nfc_read_shengchangbanci">生产班次</string>
    <string name="nfc_read_rumohunningtubiaomianwendu">入模温度</string>
    <string name="nfc_read_gangmobianhao">钢模编号</string>
    	<string name="nfc_read_gangmojiance">钢模检测</string>
    <string name="nfc_read_gujiabianhao">网架编号</string>
		<string name="nfc_jyjc_gangwangjiajiance">骨架检测</string>
    <string name="nfc_read_touliaoqingdan">投料清单</string>
    <string name="nfc_read_yaohao">窑号</string>
    	<string name="nfc_read_yaowenjiankongshuju">窑温监控数据</string>
    <string name="nfc_read_ruyaoshijian">入窑时间</string>
    <string name="nfc_read_chuyaoshijian">出窑时间</string>
    <string name="nfc_read_tuomoqiwen">脱模气温</string>
    <string name="nfc_read_tuomoguanpianwendu">脱模温度</string>
    <string name="nfc_read_shuiyangchihao">水养池号</string>
    	<string name="nfc_read_shuiyangchijiankongshuju">水养池监控数据</string>
    <string name="nfc_read_shuiyangchishijian">进池时间</string>
    <string name="nfc_read_chushuiyangchishijian">出池时间</string>
    <string name="nfc_read_jingchuruchang">进出堆场</string>
    <string name="nfc_read_duichangyanghu">堆场养护</string>
    <string name="nfc_read_guanpianxiufu">管片修复</string>
    <string name="nfc_read_jianliqueren">管片状态</string>
    <string name="nfc_read_zhibaozhiliao">验收资料</string>
		<string name="nfc_zb_shuini">水泥</string>
		<string name="nfc_zb_gangjing">钢筋</string>
		<string name="nfc_zb_hunningtuyongsha">混凝土用砂</string>
		<string name="nfc_zb_hunningtuyongshi">混凝土用石</string>
		<string name="nfc_zb_kuangzaweifeng">矿渣微粉</string>
		<string name="nfc_zb_fengmeihui">粉煤灰</string>
		<string name="nfc_zb_waijiaji">外加剂</string>
        <string name="nfc_zb_hunningtu">混凝土</string>
		<string name="nfc_zb_qita">其他资料</string>
    <string name="nfc_read_jianyanjiance">检验检测</string>
        <string name="nfc_jyjc_kanyaqiangdu">抗压强度</string>
        	<string name="nfc_read_kanyaqiangduquxian">抗压强度曲线</string>
		<string name="nfc_jyjc_kangshengjiance">抗渗检测</string>
		<string name="nfc_jyjc_qitajiance">其他检测</string>
		<string name="nfc_jyjc_chuchangjianyan">出厂检验</string>
        <string name="nfc_jyjc_xingshijianyan">型式检验</string>
    <string name="nfc_read_shengchengdangwei_str">福建省榕圣市政管片厂</string>
    <string name="nfc_read_gongchengmingcheng_str">福州轨道交通2号线</string>
    <string name="pref_title_guanpian_info">管片信息</string>
   	<string name="nfc_read_shengchangbianhao">生产编号</string>
   	<string name="nfc_read_jihuadanhao">计划单号</string>
   	<string name="nfc_read_jihuashengchangshijian">计划生产时间</string>
   	<string name="nfc_read_shijishengchangshijian">实际生产时间</string>
   	<string name="pref_title_sys_info">系统信息</string>
    <string name="nfc_sys_version">版本</string>
    <string name="nfc_sys_user">用户</string>
    <string name="nfc_sys_login">已登录</string>
    <string name="nfc_sys_logout">未登录</string>
   	<string name="toast_hit_input_id">请输入芯片ID</string>
   	<string name="toast_hit_nfc_ext">请连接外接NFC设备!</string>
   	<string name="toast_hit_nfc_enable">请在系统设置中先启用NFC功能!</string>
   	<string name="toast_hit_load_wait">加载中，请稍后.....</string>
    <string name="toast_hit_upload_wait">上传中，请稍后.....</string>
   	<string name="toast_hit_new_version">当前已是最新版本!</string>
   	<string name="toast_hit_net_error">网络异常！</string>
    <string name="toast_hit_sqlserver_error">服务器异常！</string>
   	<string name="toast_hit_sql_error">数据获取异常！</string>
   	<string name="toast_hit_link_error">数据未更新！</string>
    <string name="toast_hit_upload_success">上传成功！</string>
    <string name="toast_hit_upload_error">上传失败！</string>
    <string name="toast_hit_upgrade_success">更新成功！</string>
    <string name="toast_hit_upgrade_error">更新失败！</string>
    <string name="toast_hit_liucheng_snap">功能暂未开通！</string>
    <string name="toast_hit_save_success">保存成功！</string>
    <string name="toast_hit_save_error">保存失败！</string>
    <string name="toast_hit_login_error">请先登录！</string>
    <string name="toast_hit_use_card">请刷卡！</string>
    <string name="toast_hit_logout">登陆信息</string>
    <string name="toast_hit_logout_info">请确认是否退出登陆！！</string>
    <string name="hit_ok">确定</string>
    <string name="hit_quit">取消</string>
   	<string name="downloading">升级中</string>
   	<string name="button_err">取消</string>
   	<string name="data_noUpdate">数据未更新</string>
    <string name="login_user">用户名</string>
    <string name="login_name">姓名</string>
    <string name="login_ltd">单位</string>
    <string name="login_type">角色</string>
        <string name="login_type_zc">驻厂监理</string>
        <string name="login_type_xc">现场监理</string>
    <string name="login_userid">身份证号</string>
    <string name="login_in">登陆</string>
    <string name="login_out">退出</string>
    <string name="login_user_out">未登录</string>
    <string name="liucheng_chuchangjianyan">出厂确认</string>
    <string name="liucheng_jinchangjianyan">进场确认</string>
    <string name="liucheng_shigojilu">施工记录</string>
    <string name="liucheng_xiufujilu">修复记录</string>
    <string name="liucheng_qita">其他流程</string>
    <string name="liucheng_hege">合格</string>
    <string name="liucheng_buhege">不合格</string>
    <string name="liucheng_null">无</string>
    <string name="liucheng_tuihui">退回</string>
    <string name="liucheng_name">流程名称</string>
    <string name="liucheng_yanshoujielun">验收结论</string>
    <string name="liucheng_chulifangshi">处理方式</string>
    <string name="liucheng_wenzishuoming">文字说明</string>
    <string name="liucheng_caozuoren">操作人</string>
    <string name="liucheng_querenshijian">确认时间</string>
    <string name="liucheng_image">图像</string>
    <string name="liucheng_snap">拍照</string>
    <string name="liucheng_upload">上传</string>
    <string name="report_list_id">报告</string>
    <string name="report_list_jianyanjigou">检验机构</string>
    <string name="menu_shigong_record">施工记录</string>
    <string name="menu_xiufu_record">修复记录</string>
    <string name="wendu_type_yaowen">窑温监测</string>
    <string name="wendu_type_shuichi">水池温度监测</string>
    <string name="wendu_type_rumo">入模温度监测</string>
    <string name="wendu_time">时间</string>
    <string name="wendu_wendu">温度</string>
    <string name="peihebi_caijishijian">采集时间</string>
    <string name="peihebi_jiaobantaihao">搅拌台</string>
    <string name="peihebi_xialiaodanhao">下料单号</string>
    <string name="peihebi_peihebidanhao">配合比单号</string>
    <string name="peihebi_shuini">水泥</string>
    <string name="peihebi_fenmeihui">粉煤灰</string>
    <string name="peihebi_kuanfen">矿粉用量</string>
    <string name="peihebi_shi1">石1用量</string>
    <string name="peihebi_shi2">石2用量</string>
    <string name="peihebi_sha1">砂1用量</string>
    <string name="peihebi_sha2">砂2用量</string>
    <string name="peihebi_waijiaji1">外加剂1</string>
    <string name="peihebi_waijiaji2">外加剂2</string>
    <string name="peihebi_waijiaji3">外加剂3</string>
    <string name="peihebi_shuiyongliang">水用量</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加至日程表</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨打电话</string>
    <string name="button_email">发送 E-mail</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开商品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">分享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过 E-mail 分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">E-mail 地址</string>
    <string name="contents_location">经纬度</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信号码</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史记录</string>
    <string name="history_email_title">条码扫描器的历史</string>
    <string name="history_empty">空</string>
    <string name="history_empty_detail">没有历史记录</string>
    <string name="history_send">发送历史记录</string>
    <string name="history_title">历史记录</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">创建二维码</string>
    <string name="msg_bulk_mode_scanned">批量扫描模式：条码已扫描并保存</string>
    <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法生成条码。</string>
    <string name="msg_error">错误</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开应用。条码内容可能无效。</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">确定吗？</string>
    <string name="msg_unmount_usb">抱歉，无法访问 SD 卡。</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="zxing">二维码</string>
</resources>