<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical" >
   <TextView
       android:id="@+id/UserName"
       android:layout_width = "wrap_content"
       android:layout_height = "wrap_content"
       android:text="@string/toast_hit_input_id"
       /> 
    <EditText
        android:id="@+id/EditID"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:inputType="numberSigned"
        android:gravity="center_vertical"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/ButtonOk"
            android:layout_marginTop="3dip"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:singleLine="true"/>

        <Button
            android:id="@+id/ButtonCancle"
            android:layout_marginTop="3dip"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_err"
            android:singleLine="true"/>

        <Button
            android:id="@+id/zxing"
            android:layout_marginTop="3dip"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zxing"
            android:singleLine="true"/>
    </LinearLayout>
</LinearLayout>
