<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/liucheng_add"
        android:layout_width="match_parent"
        android:layout_height="500dp"></ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/liucheng_snap"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/liucheng_snap"/>
        <Button
            android:id="@+id/liucheng_upload"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/liucheng_upload"/>
        <Button
            android:id="@+id/liucheng_ok"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/button_ok"/>
    </LinearLayout>
    
    <ImageView
        android:id="@+id/liucheng_snapview"
        android:layout_width="fill_parent"
        android:layout_height="200dp" />

</LinearLayout>